WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10328
REGRESSION: frame leak reported by buildbot
https://bugs.webkit.org/show_bug.cgi?id=10328
Summary
REGRESSION: frame leak reported by buildbot
Mark Rowe (bdash)
Reported
2006-08-09 16:07:30 PDT
For the last few days, the leak slave on the buildbot has been reporting many leaks: 1972 total leaks found! 124 Node 11 RenderObject 1 Frame 39 KJS::Node The `leaks' output from the build slave is available at <
http://build.webkit.org/results/post-commit-leaks-powerpc-mac-os-x/2270/
>
Attachments
patch (EditorClient can't retain WebView, or we get a reference cycle)
(3.49 KB, patch)
2006-10-21 18:18 PDT
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2006-10-21 18:16:02 PDT
I decided to use this bug report to represent the latest leak. It's from EditorClient. Attaching a patch.
Darin Adler
Comment 2
2006-10-21 18:18:10 PDT
Created
attachment 11178
[details]
patch (EditorClient can't retain WebView, or we get a reference cycle)
Anders Carlsson
Comment 3
2006-10-21 18:45:04 PDT
Comment on
attachment 11178
[details]
patch (EditorClient can't retain WebView, or we get a reference cycle) r=me
Darin Adler
Comment 4
2006-10-21 18:58:15 PDT
Committed revision 17199.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug